<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lanelet2</name>
  <version>1.1.1</version>
  <description>Meta-package for lanelet2</description>

  <license>BSD</license>
  <maintainer email="fabian.immel@kit.edu">Fabian Immel</maintainer>
  <author email="fabian.poggenhans@kit.edu">Fabian Poggenhans</author>
  <url type="repository">https://github.com/fzi-forschungszentrum-informatik/lanelet2.git</url>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>lanelet2_core</depend>
  <depend>lanelet2_io</depend>
  <depend>lanelet2_traffic_rules</depend>
  <depend>lanelet2_routing</depend>
  <depend>lanelet2_python</depend>
  <depend>lanelet2_maps</depend>
  <depend>lanelet2_matching</depend>
  <depend>lanelet2_projection</depend>
  <depend>lanelet2_validation</depend>
  <depend>lanelet2_examples</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
