<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lanelet2_maps</name>
  <version>1.1.1</version>
  <description>Example maps in the lanelet2-format</description>

  <license>BSD</license>
  <maintainer email="fabian.immel@kit.edu">Fabian Immel</maintainer>
  <author email="fabian.poggenhans@kit.edu">Fabian Poggenhans</author>
  <url type="repository">https://github.com/fzi-forschungszentrum-informatik/lanelet2.git</url>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
