<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lanelet2_projection</name>
  <version>1.1.1</version>
  <description>Lanelet2 projection library for lat/lon to local x/y conversion</description>

  <license>BSD</license>
  <maintainer email="jan-hendrik.pauls@kit.edu">Jan-Hendrik Pauls</maintainer>
  <author email="maximilian.naumann@kit.edu">Maximilian Naumann</author>
  <author email="fabian.poggenhans@kit.edu">Fabian Poggenhans</author>
  <author email="jan-hendrik.pauls@kit.edu">Jan-Hendrik Pauls</author>
  <author email="michal.antkiewicz@uwaterloo.ca">Michał Antkiewicz</author>
  <url type="repository">https://github.com/fzi-forschungszentrum-informatik/lanelet2.git</url>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>eigen</depend>
  <depend>boost</depend>
  <depend>lanelet2_io</depend>
  <depend>geographiclib</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rosdoc config="../rosdoc.yaml" />
  </export>
</package>
